# btsdk-host-peer-apps-mesh

./: .cyignore  README.md
host/Qt_ClientControl/: btspy_ux.c  btspy_win32.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh_client.pro  open.sh  qtwicedtimer.cpp  qtwicedtimer.h  sensorcfgdlg.cpp  sensorcfgdlg.h  sensorcfgdlg.ui  serial_port.cpp  wiced_bt_trace.h
host/Qt_ClientControl/Linux64/: RunClientControl.sh  mesh_client
host/Qt_ClientControl/include/: EventHandler.h  SocketHelper.h  ThreadHelper.h  add_defines.h  bt_trace.h  win_data_types.h
host/Qt_ClientControl/lib64/: ws2_32.lib
host/Qt_ClientControl/macos/mesh_client.app/Contents/: Info.plist
host/Qt_ClientControl/macos/mesh_client.app/Contents/Frameworks/QtPrintSupport.framework/: QtPrintSupport
host/Qt_ClientControl/macos/mesh_client.app/Contents/Frameworks/QtSerialPort.framework/: QtSerialPort
host/Qt_ClientControl/macos/mesh_client.app/Contents/Frameworks/QtSvg.framework/: QtSvg
host/Qt_ClientControl/macos/mesh_client.app/Contents/MacOS/: mesh_client
host/Qt_ClientControl/macos/mesh_client.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
host/Qt_ClientControl/macos/mesh_client.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjpeg.dylib  libqmacjp2.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
host/Qt_ClientControl/macos/mesh_client.app/Contents/PlugIns/printsupport/: libcocoaprintersupport.dylib
host/Qt_ClientControl/macos/mesh_client.app/Contents/_CodeSignature/: CodeResources
host/VS_ClientControl/: BTSDKClientControl.sln  BTSDKClientControl.vcxproj  ClientControl.cpp  ClientControl.h  ClientControl.rc  ClientControlDlg.cpp  ClientControlDlg.h  Config.cpp  ConnectedMesh.cpp  ConnectedMesh.h  ControlComm.cpp  ControlComm.h  FwDownload.cpp  LightControl.cpp  LightControl.h  LightLCConfig.cpp  LightLCConfig.h  MeshConfig.h  MeshPerf.cpp  MeshPerf.h  MeshPerformance.cpp  MeshPerformance.h  SchedulerAdvanced.cpp  SchedulerAdvanced.h  SensorConfig.cpp  SensorConfig.h  resource.h  stdafx.cpp  stdafx.h  targetver.h
include/: wiced_bt_mesh_dfu.h
mesh_client_lib/: ReadMe.txt  meshdb.c  meshdb.h  wiced_bt_mesh_db.c  wiced_bt_mesh_db.h  wiced_main.c  wiced_mesh_api.c  wiced_mesh_client.c  wiced_mesh_client.h
peer/Android/src/MeshApp/: gradle.properties  settings.gradle
peer/Android/src/MeshApp/app/: build.gradle
peer/Android/src/MeshApp/app/src/main/: AndroidManifest.xml
peer/Android/src/MeshApp/gradle/wrapper/: gradle-wrapper.properties
peer/Android/src/MeshApp/meshcore/: build.gradle
peer/Android/src/MeshApp/meshcore/src/main/: AndroidManifest.xml
peer/Android/src/MeshApp/meshframework/: build.gradle
peer/Android/src/MeshApp/meshframework/src/main/: AndroidManifest.xml
peer/Android/src/Prebuild/: settings.gradle
peer/Android/src/Prebuild/app/: build.gradle
peer/Android/src/Prebuild/app/src/main/: AndroidManifest.xml
peer/Android/src/Prebuild/app/src/main/cpp/: CMakeLists.txt  hello_lib.c
peer/Android/src/Prebuild/gradle/wrapper/: gradle-wrapper.properties
peer/Android/src/Prebuild/wicedmesh/: build.gradle  proguard-rules.pro
peer/Android/src/Prebuild/wicedmesh/src/main/: AndroidManifest.xml
peer/Android/src/Prebuild/wicedmesh/src/main/cpp/core/: CMakeLists.txt
peer/Android/src/Prebuild/wicedmesh/src/main/cpp/core/src/mesh_libs/: aes_cmac.h  bt_target.h  clock_timer.h  mesh_main.h
peer/WatchOS/MeshApp/MeshApp/MeshApp/: AppDelegate.swift  ViewController.swift
peer/WatchOS/MeshApp/MeshApp/MeshApp.xcodeproj/: project.pbxproj
peer/WatchOS/MeshApp/MeshApp/MeshAppWatchKitApp/: Info.plist
peer/WatchOS/MeshApp/MeshApp/MeshAppWatchKitApp/Assets.xcassets/AppIcon.appiconset/: Contents.json
peer/WatchOS/MeshApp/MeshApp/MeshAppWatchKitExtension/: ExtensionDelegate.swift  Info.plist  InterfaceController.swift  NotificationController.swift
peer/WatchOS/MeshApp/MeshApp/MeshAppWatchKitExtension/Assets.xcassets/Complication.complicationset/: Contents.json
peer/WatchOS/MeshApp/MeshFramework/MeshFramework/: MeshFramework.h  PlatformManager.swift
peer/WatchOS/MeshApp/MeshFramework/MeshFramework.xcodeproj/: project.pbxproj
peer/Windows/MeshClient/: BTSDKMeshClient.sln  BTSDKMeshClient.vcxproj  BtInterface.h  LightLCConfig.cpp  LightLCConfig.h  MeshAdvPublisher.cpp  MeshAdvPublisher.h  MeshClient.cpp  MeshClient.exe.manifest  MeshClient.h  MeshClient.rc  MeshClient.rc2  MeshClientDlg.cpp  MeshClientDlg.h  MeshScanner.cpp  MeshScanner.h  Resource.h  SensorConfig.cpp  SensorConfig.h  Win10Interface.cpp  Win10Interface.h  WsOtaDownloader.cpp  WsOtaDownloader.h  add_defines.h  btwleapis.h  mesh_app.c  stdafx.cpp  stdafx.h  targetver.h  wiced_bt_trace.h
peer/Windows/MeshClient/MeshLibraries/Release/: mesh_libs.lib
peer/iOS/MeshApp/MeshApp.xcworkspace/: contents.xcworkspacedata
peer/iOS/MeshApp/MeshApp/MeshApp/: AppDelegate.swift  Info.plist
peer/iOS/MeshApp/MeshApp/MeshApp.xcodeproj/: project.pbxproj
peer/iOS/MeshApp/MeshApp/MeshApp/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
peer/iOS/MeshApp/MeshApp/MeshApp/Helper/: CustomCardView.swift  CustomDropDownButton.swift  CustomDropDownView.swift  CustomIndicatorView.swift  CustomLayoutButton.swift  CustomRadioButton.swift  CustomRoundedRectButton.swift  MeshAppConstants.swift  UtilityManager.swift
peer/iOS/MeshApp/MeshApp/MeshApp/Model/: NetworkManager.swift  UserSettings.swift
peer/iOS/MeshApp/MeshApp/MeshApp/Settings.bundle/: Root.plist
peer/iOS/MeshApp/MeshFramework/MeshFramework/: MeshConstants.swift  MeshDevice.swift  MeshFramework.h  MeshFrameworkManager.swift  MeshGattClient.swift  MeshStorageSettings.swift  MeshUtility.swift  PlatformManager.swift  TrackingHelper.swift
peer/iOS/MeshApp/MeshFramework/MeshFramework.xcodeproj/: project.pbxproj
peer/iOS/MeshApp/MeshFramework/MeshFramework/FirmwareOta/: OtaConstants.swift  OtaDevice.swift  OtaManager.swift  OtaUpgrader.swift
peer/iOS/MeshApp/MeshFramework/meshcore/: IMeshNativeCallback.h  MeshNativeHelper.h  MeshNativeHelper.m
(+314 files in other folders)
